# 2021FA_parallel-computing

./: CMakeLists.txt  README.md
open-mp/: main.c  utils.c  utils.h
